scoring/errlog/9.log
./scoring/source/9.cpp:1:1: error: unknown type name 'asfawdf'
asfawdf
^
./scoring/source/9.cpp:1:8: error: expected unqualified-id
asfawdf
       ^
2 errors generated.
